--- a/answers.html
+++ b/answers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IT Support Online Homepage</title>
+	<title>Answers - IT Support Online</title>
 	<link rel="stylesheet" type="text/css" href="resource/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="resource/css/styles.css">
 </head>
@@ -24,7 +24,7 @@
 
 
 		<section class="row">		
-			<div class="col-2 border-right">
+			<div class="col-2">
 				<div class="title mb-1">All Categories</div>
 
 				<div class="d-flex flex-column">
@@ -50,18 +50,21 @@
 						</div>
 					</div>
 
-
-					<div class="question">
-						<span class="text-success font-weight-bold">marryann : </span>
-						<a href="answers.html">
-							Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery
-						</a>
-
-						<div class="details d-flex justify-content-between">
-							<div><small class="text-muted">Answers:</small> 5</div>
-							<div><small class="text-muted">Category:</small> Java</div>
-							<div><small class="text-muted">Posted:</small> 12/12/2020 08:00</div>
+					<div class="my-2">
+						<textarea class="form-control form-control-sm mb-1" name="answer" placeholder="Type an answer here"></textarea>
+						<div class="text-right">
+							<button class="btn btn-sm btn-ghost">Reply</button>
 						</div>
+					</div>
+
+					<div class="answers">
+						<span class="text-info font-weight-bold">charles : </span>
+						Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery
+					</div>
+
+					<div class="answers">
+						<span class="text-info font-weight-bold">michael01 : </span>
+						An an valley indeed so no wonder future nature vanity. Debating all she mistaken indulged believed provided declared. He many kept on draw lain song as same.
 					</div>
 				</div>
 			</div>
