--- a/users/home.html
+++ b/users/home.html
@@ -20,7 +20,10 @@
 	<section class="mt-4">			
 		
 		<div class="row">
-			<div class="col-12 mb-3"><div class="text-center"><span class="title">Questions</span></div></div>
+			<div class="col-12 offset-md-1 col-md-10 mb-3 d-flex justify-content-between">
+				<span class="title">My Questions</span>
+				<a href="ask.html" class="btn btn-sm btn-ghost">Ask question</a>
+			</div>
 
 			<div class="col-12 offset-md-1 col-md-10">
 				
@@ -29,6 +32,7 @@
 						<th>No.</th>
 						<th>Question</th>
 						<th>Category</th>
+						<th class="text-center">Action</th>
 					</tr>
 					<tr>
 						<td>1</td>
@@ -36,6 +40,9 @@
 							<a href="../answers.html">Question will be printed here.</a>
 						</td>
 						<td>C++</td>
+						<td class="text-center">
+							<a href="" class="badge badge-danger">Delete</a>
+						</td>
 					</tr>
 				</table>
 
